--- a/.github/workflows/github_actions_ci.yaml
+++ b/.github/workflows/github_actions_ci.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: CD
+name: CD/CD (Continuous integration and continuous delivery)
 
 # Controls when the workflow will run
 on:
@@ -13,19 +13,19 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  job_docker:
-    name: J1 -> Docker Job
+  job_build:
+    name: Build Job
     runs-on: docker-latest
     steps:
-      - name: J1S1 -> Docker Step 1
-        run: echo Starting Docker
+      - name: Compiling the code
+        run: echo Compiling the code...
+      - name: Compile complete
+        run: Compile complete.
 
-  job_1:
-    name: J2 -> DevSecOps Job
+  job_security_test_dast:
+    name: Security testing DAST
     runs-on: ubuntu-latest
+    needs: [job_build]
     steps:
-      - name: J2S1 -> DevSecOps Step 1
-        run: echo Starting DevSecOps on Python code
-
-      - name: J2S2 -> DevSecOps Step 2
-        run: echo Starting DevSecOps on Flask code
+      - name: Security DAST testing
+        run: echo Security DAST testing...
